welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:8: error: ')' expected but ';' found.
	}while(croisement();
                           ^